--- a/assets/dev/scss/style.scss
+++ b/assets/dev/scss/style.scss
@@ -180,6 +180,7 @@ footer {
   background-color: white;
   z-index: 2;
   margin-bottom: -79px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .affix {
