--- a/assets/prod/css/style.css
+++ b/assets/prod/css/style.css
@@ -134,7 +134,8 @@ footer {
 .layer-nav {
   background-color: white;
   z-index: 2;
-  margin-bottom: -79px; }
+  margin-bottom: -79px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
 
 .affix {
   top: 0;
